Closed
Bug 191712
Opened 23 years ago
Closed 22 years ago
nsDateTimeFormatUnix returns an uninitialized value in an error case
Categories
(Core :: Internationalization, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
Details
Attachments
(3 files)
1.62 KB,
patch
|
smontagu
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
9.49 KB,
text/plain
|
Details | |
15.70 KB,
image/jpeg
|
Details |
while i was rebuilding i noticed this warning...
Attachment #113382 -
Flags: superreview?(alecf)
Attachment #113382 -
Flags: review?(smontagu)
Comment 2•23 years ago
|
||
Comment on attachment 113382 [details] [diff] [review]
patch
sr=alecf
Attachment #113382 -
Flags: superreview?(alecf) → superreview+
Comment 3•23 years ago
|
||
Comment on attachment 113382 [details] [diff] [review]
patch
r=smontagu
Attachment #113382 -
Flags: review?(smontagu) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 5•22 years ago
|
||
*** Bug 126475 has been marked as a duplicate of this bug. ***
If i build with this (/nsDateTimeFormatUnix.cpp/1.50/Sun Feb 23 13:45:16 2003//)
i crash when selecting mails. Complete blocker.
A couple of times i didn't crash on the first mail i selected, but on the second
one. Once i froze instead, and the date stamp in the mail i'd clicked on then
looked like one very long string of chinese.
This checkin looked interesging so i backed it out: voila - no more crash.
I then updated to v 1.50 again, and once again i crash.
Linux, trunk CVS, running on RH8.
Comment 10•22 years ago
|
||
ac_add_options --disable-accessibility
ac_add_options --disable-postscript
ac_add_options --disable-ldap
ac_add_options --disable-debug
ac_add_options --disable-tests
ac_add_options --disable-logging
ac_add_options --enable-crypto
ac_add_options --enable-optimize=-O2
ac_add_options --disable-bidi
ac_add_options --disable-jsd
ac_add_options --disable-mathml
Comment 11•22 years ago
|
||
i do not crash with official build 2003022222. Clobbering now.
Comment 12•22 years ago
|
||
Still crashes.
Comment 13•22 years ago
|
||
and... now it works.
I re-pulled, removed "disable-bidi" since it has no effect anymore, changed LANG
to no_NO, and a new build then worked.
Re-instated disable-bidi and rebuilt: Still no crash.
I doubt the LANG environment caused this.
And i can't see anything in the newer checkins?
Comment 14•22 years ago
|
||
oh.. i CAN see the new checkin - 1.51
You need to log in
before you can comment on or make changes to this bug.
Description
•