Bug 191712 nsDateTimeFormatUnix returns an uninitialized value in an error case r=smontagu sr=alecf